--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "github-users-network",
+  "homepage": "https://vadimcrmnl1.github.io/GitHub-Users-Network/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
